<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.a9770382.event.LoginActivity">

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:ems="10"
        android:hint="@string/passwordText"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="HardcodedText,MissingConstraints,RtlHardcoded"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="352dp" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="35dp"
        android:text="@string/signInButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/signUpButton"
        app:layout_constraintTop_toBottomOf="@+id/passwordText"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginRight="54dp"
        android:onClick="SignUpButton"
        android:text="@string/signUpButton"
        app:layout_constraintBaseline_toBaselineOf="@+id/signInButton"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/userNameText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="23dp"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/usernameText"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/passwordText"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.821"
        tools:ignore="HardcodedText,RtlHardcoded" />

</android.support.constraint.ConstraintLayout>
